fix click outside for timepicker and search bar (#694)
* fix padding for search bar in home page

* Fix access bug and clickoutside,remove directive

* Add access team sub

* fix time-picker click outside in detectors

* Add sub in whitelist

* Add comments for whitelist

--- a/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/detector-time-picker/detector-time-picker.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/detector-time-picker/detector-time-picker.component.html
@@ -1,4 +1,4 @@
-<div class="timepicker">
+<div class="timepicker" id="timePicker">
   <div class="time-picker-container" *ngIf="globals.openTimePicker" (keyup.escape)="closeTimePicker($event)">
     <fab-choice-group [options]="choiceGroupOptions" [defaultSelectedKey]="defaultSelectedKey">
     </fab-choice-group>
