--- a/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/fabric-search-results/fabric-search-results.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/fabric-search-results/fabric-search-results.component.html
@@ -1,5 +1,5 @@
-<div role="search" class="search-result-container" (clickOutside)="clickOutsideHandler()">
-  <div class="search-box" #fabSearchBox>
+<div role="search" class="search-result-container" #fabSearchResult>
+  <div class="search-box">
     <fab-search-box id="fabSearchBox" tabindex="0" type="search" placeholder="Search" [value]="searchValue"
       (onChange)="updateSearchValue($event)" (onFocus)="onSearchBoxFocus()" (onBlur)="onBlurHandler()"
       (onEscape)="clearSearchWithKey()" aria-controls="search-results">
@@ -16,7 +16,7 @@
           <fab-details-list-column>
             <render>
               <ng-template let-feature="item">
-                <div class="result-item" tabindex="0" (mousedown)="navigateToFeature(feature)" class="result-item">
+                <div class="result-item" tabindex="0" (mousedown)="navigateToFeature(feature)" class="result-item remove-results-padding">
                   <div>
                     <img style="height: 20px;width: 20px;margin-right: 5px;" [src]="generateIconImagePath(feature.id)"
                       alt="">
