Test component ref for refreshing

--- a/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/category-overview/category-overview.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/fabric-ui/components/category-overview/category-overview.component.html
@@ -8,6 +8,6 @@
     </p>
   </div>
   <div style="margin-left: -20px;margin-top: 10px;">
-    <detector-container [detector]="categoryId" [hideDetectorControl]="true"></detector-container>
+    <detector-container #detectorContainerComponent [detector]="categoryId" [hideDetectorControl]="true"></detector-container>
   </div>
 </div>
