Fix time picker

--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/generic-analysis/generic-analysis.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/generic-analysis/generic-analysis.component.html
@@ -1,4 +1,4 @@
-<detector-container *ngIf="displayDetectorContainer" [detector]="analysisDetector" [isAnalysisView]="true"></detector-container>
+<detector-container #detectorContainerComponent *ngIf="displayDetectorContainer" [detector]="analysisDetector" [isAnalysisView]="true"></detector-container>
 <div *ngIf="showSearchBar" class="search-box">
     <span>Diagnostics based on </span>
     <div class="search-input-box">
