--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/generic-detector/generic-detector.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/generic-detector/generic-detector.component.html
@@ -1,4 +1,4 @@
 <div [ngClass]="{'detector-padding': analysisMode === false}">
-    <detector-container #detectorContainerComponent [analysisMode]="analysisMode" [detector]="detector"></detector-container>
+    <detector-container [analysisMode]="analysisMode" [detector]="detector"></detector-container>
 </div>
 
