Fix timer picker (#710)

--- a/AngularApp/projects/diagnostic-data/src/lib/components/detector-control/detector-control.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/detector-control/detector-control.component.html
@@ -50,7 +50,7 @@
     </div>
 
     <div class="control-group">
-      <div class="control"  (keyup.enter) = "detectorControlService.refresh()" (click)="detectorControlService.refresh()" name = "Refresh" value = "Refresh" aria-label = "Refresh" tabindex="0" role = "button">
+      <div class="control"  (keyup.enter) = "refreshPage()" (click)="refreshPage()" name = "Refresh" value = "Refresh" aria-label = "Refresh" tabindex="0" role = "button">
         <i class="fa fa-refresh"></i>
       </div>
     </div>
