Fixing two way binding to checkbox

--- a/AngularApp/projects/diagnostic-data/src/lib/components/cxp-chat-launcher/cxp-chat-launcher.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/cxp-chat-launcher/cxp-chat-launcher.component.html
@@ -15,7 +15,7 @@
       <div class="cxpChat-ConsentContainer">
         <div class="cxpChat-ConsentOptionContainer">
           <div>
-            <input id="chkBoxDiagnosticConsent" type="checkbox" [checked]="diagnosticLogsConsent">
+            <input id="chkBoxDiagnosticConsent" type="checkbox" [(ngModel)]="diagnosticLogsConsent">
           </div>
           <div class="cxpChat-ConsentText">
             <label for="chkBoxDiagnosticConsent">Share diagnostic information.</label>
