--- a/AngularApp/projects/diagnostic-data/src/lib/components/cxp-chat-launcher/cxp-chat-launcher.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/cxp-chat-launcher/cxp-chat-launcher.component.html
@@ -9,12 +9,35 @@
       <div>
         I'd love to help you out with your issue and connect you with our quick help chat team.
       </div>
+      <br/>
+
+
+      <div class="cxpChat-ConsentContainer">
+        <div class="cxpChat-ConsentOptionContainer">
+          <div>
+            <input id="chkBoxDiagnosticConsent" type="checkbox" [(ngModel)]="diagnosticLogsConsent">
+          </div>
+          <div class="cxpChat-ConsentText">
+            <label for="chkBoxDiagnosticConsent">Share diagnostic information.</label>
+          </div>
+        </div>
+          <div>
+          <a target="_blank" role="link" aria-label="Click to learn more about the information we collect" title="Click to learn more about the information we collect."
+           href="https://azure.microsoft.com/en-us/support/legal/support-diagnostic-information-collection/">
+            <i class="fa fa-info-circle"></i>
+          </a>
+        </div>
+      </div>
+      
+
+
+
     </div>
     <div class="cxpChat-actionBtnContainer">
-      <input class="custom-button inactive-button white-border" (click)="hideChatConfDialog(true, 'CancelButton')" type="button"
-        value="Maybe later" />
-      <input class="custom-button default-button white-border" (click)="openChatPopup()" type="button"
-        value="Confirm & Start!" />
+      <input class="custom-button inactive-button white-border" (click)="hideChatConfDialog(true, 'CancelButton')" type="button" role="button"
+        aria-label="Maybe later" value="Maybe later" />
+      <input class="custom-button default-button white-border" (click)="openChatPopup()" type="button" role="button"
+        aria-label="Confirm and Start" value="Confirm & Start!" />
     </div>
   </div>
 
