--- a/AngularApp/projects/diagnostic-data/src/lib/components/detector-search/detector-search.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/detector-search/detector-search.component.html
@@ -1,3 +1,4 @@
+<div inViewport [inViewportOptions]="{ threshold: [0.3, 0.7] }" (inViewportAction)="listenVisibility($event)">
 <div *ngIf="searchConfiguration.DetectorSearchEnabled || searchConfiguration.WebSearchEnabled">
     <div style="display:block;margin-bottom:10px;margin-top:10px;">
         <span class="span-h1">Didn’t find what you’re looking for? Tell us about your problem below, and we may be able to provide some additional diagnostics:</span>
@@ -161,4 +162,5 @@
 </div>
 <div style="margin-left:20px;margin-top:20px;" *ngIf="searchConfiguration.WebSearchEnabled">
     <web-search [searchTerm]="searchTerm" [searchId]="searchId" [isChildComponent]="true" [(searchResults)]="webSearchResults" [webSearchConfig]="searchConfiguration.WebSearchConfiguration"></web-search>
+</div>
 </div>
