--- a/AngularApp/projects/diagnostic-data/src/lib/components/dropdown/dropdown.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/dropdown/dropdown.component.html
@@ -29,7 +29,7 @@
 
   <div class="body-container">
       <div *ngFor="let data of selectedData" class="dynamic-data-container">
-          <dynamic-data [diagnosticData]="data" [startTime]="startTime" [endTime]="endTime"></dynamic-data>
+          <dynamic-data [diagnosticData]="data" [startTime]="startTime" [endTime]="endTime" [xAxisPlotBands]="xAxisPlotBands"  [isAnalysisView]="isAnalysisView"></dynamic-data>
         </div>
   </div>
   
