--- a/AngularApp/projects/diagnostic-data/src/lib/components/dynamic-insight/dynamic-insight.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/dynamic-insight/dynamic-insight.component.html
@@ -55,7 +55,7 @@
 
   <div class="panel-body" *ngIf="insight.isExpanded">
     <div *ngIf="insight.description" [innerHtml]="insight.description"></div>
-    <dynamic-data [diagnosticData]="insight.innerDiagnosticData" [startTime]="startTime" [endTime]="endTime">
+    <dynamic-data [diagnosticData]="insight.innerDiagnosticData" [startTime]="startTime" [endTime]="endTime"  [xAxisPlotBands]="xAxisPlotBands"  [isAnalysisView]="isAnalysisView">
     </dynamic-data>
   </div>
 </div>
