--- a/AngularApp/projects/diagnostic-data/src/lib/components/detector-list-analysis/detector-list-analysis.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/detector-list-analysis/detector-list-analysis.component.html
@@ -1,6 +1,17 @@
 <span *ngIf="showPreLoadingError" style="margin-left:30px;margin-top:10px;">{{preLoadingErrorMessage}}</span>
 <span *ngIf="showPreLoader"><i class="fa fa-circle-o-notch fa-2x fa-spin preloading-icon"></i></span>
-<div [hidden]="detectorId !== ''">
+<div *ngIf = "searchMode != SearchAnalysisMode.Genie && inDrillDownMode">
+  <div>
+    <div style="display: inline-block;margin-left: 20px">
+      <h2>{{ detectorName }}</h2>
+    </div>
+    <div style="display: inline-block;margin-left: 10px">
+      <a tabindex="0" (keyup.enter)="goBackToAnalysis()" aria-label="Link to go back to the analysis view" role="button"
+        (click)="goBackToAnalysis()" >Back to Observations</a>
+    </div>
+  </div>
+</div>
+<div *ngIf = "!inDrillDownMode">
   <div *ngIf="getPendingDetectorCount() > 0" style="margin-left:30px;margin-bottom: 30px">
     <i class="fa fa-circle-o-notch fa-2x fa-spin spin-icon" aria-hidden="true"></i>
     <span [@loadingAnimation]="showLoadingMessage ? 'shown' : 'hidden'"
