--- a/AngularApp/projects/app-service-diagnostics/src/app/shared/components/tools/profiler-tool/profiler-tool.component.html
+++ b/AngularApp/projects/app-service-diagnostics/src/app/shared/components/tools/profiler-tool/profiler-tool.component.html
@@ -1,6 +1,6 @@
 <div class="container">
-    <div class="header1">{{ title }}</div>
-    <p>{{ description }}</p>
+    <h2 tabindex="0">{{ title }}</h2>
+    <p tabindex="0">{{ description }}</p>
 
     <div class="wizardcontainer">
 
